# backstage

./: MANIFEST.in  README.md  setup.cfg
.pyrustic/backstage/: build_report.json
.pyrustic/buildver/: build_report
backstage/: __init__.py  __main__.py  cmdline.py  constant.py  oneline.py
backstage/cli/: __init__.py  build.py  init.py  release.py  run.py  setup.py  version.py
backstage/constant/: __init__.py
backstage/core/: __init__.py  backstage_setup.py  building.py  constant.py  dist.py  funcs.py  github_client.py  hooking.py  initialization.py  installation.py  lite_test_runner.py  publishing.py  pymisc.py  releaser.py  runner.py  tasks.py  versioning.py
backstage/error/: __init__.py
backstage/handler/: add_handler.py  build_handler.py  hub_handler.py  init_handler.py  link_handler.py  recent_handler.py  release_handler.py  relink_handler.py  run_handler.py  target_handler.py  version_handler.py
backstage/namespace/: __init__.py
backstage/pattern/: __init__.py
backstage/pyrustic_data/backstage/data/: build_report.json  github_release_form.json
backstage/pyrustic_data/backstage/report/: build_report.json
backstage/runner/: __init__.py
backstage/script/: build.py  build_project.py  gitcommit.py  github_release.py  gitinit.py  gitpush.py  init.py  init_project.py  release.py  run.py  run_tests.py  update_changelog.py  update_github_release_form.py  version.py  versioning.py
backstage/template/: gitignore_template.txt  main_template.txt  setup_cfg_template.txt  tasks.txt
backstage/template/app/: gitignore_template.txt  main_template.txt  readme_template.txt  setup_cfg_template.txt  test_template.txt  tests_main_template.txt
backstage/text/: __init__.py
backstage/usage/: __init__.py
backstage/util/: __init__.py
docs/modules/: README.md
docs/modules/content/backstage.__main__/: classes.md  constants.md  functions.md
docs/modules/content/backstage.cli.build/: classes.md  constants.md  functions.md
docs/modules/content/backstage.cli.init/: classes.md  constants.md  functions.md
docs/modules/content/backstage.cli.release/: classes.md  constants.md  functions.md
docs/modules/content/backstage.cli.run/: classes.md  constants.md  functions.md
docs/modules/content/backstage.cli.setup/: classes.md  (+2 more)
docs/reference/: README.md
docs/reference/content/: backstage.__init__.md  backstage.constant.md  backstage.handler.__init__.md  backstage.handler.add_handler.md  backstage.handler.build_handler.md  backstage.handler.hub_handler.md  backstage.handler.init_handler.md  backstage.handler.link_handler.md  backstage.handler.recent_handler.md  backstage.handler.release_handler.md  backstage.handler.relink_handler.md  backstage.handler.run_handler.md  backstage.handler.target_handler.md  backstage.handler.unlink_handler.md  backstage.handler.version_handler.md  backstage.oneline.md  backstage.script.__init__.md  backstage.script.build_project.md  backstage.script.github_release.md  backstage.script.init_project.md  backstage.script.run_tests.md  backstage.script.update_changelog.md  backstage.script.update_github_release_form.md  backstage.script.versioning.md
(+119 files in other folders)
