[metadata]
name = backstage
version = file: VERSION
url = https://github.com/pyrustic/backstage
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = CLI tool to manage, test, build, and release your Python projects
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    project-manager
    manager
    packaging
    release
    build
    project-init
    lightweight
    pyrustic
    tool
    productivity
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    setuptools
    wheel
    importlib-metadata ; python_version < "3.8"

[options.entry_points]
console_scripts =
    backstage = backstage.__main__:main
