[metadata]
name = backstage
version = file: VERSION
url = https://github.com/pyrustic/backstage
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Extensible command line tool for managing software projects
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    project-manager
    manager
    packaging
    release
    build
    project-init
    lightweight
    pyrustic
    tool
    CLI
    setup
    versioning
    git
    language-agnostic
    productivity
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    buildver
    hackernote
    setupinit
    subrun

[options.entry_points]
console_scripts =
    backstage = backstage.__main__:main
